fix: -fixed wrong margin-bottom css style

--- a/main.css
+++ b/main.css
@@ -101,7 +101,6 @@ hr.hr-card {
 
 #galeria {
     background-color: #ffd699a5;
-    margin-bottom: 10px;
 }
 
 #galeria .col-sm-6 {
@@ -135,7 +134,6 @@ hr.hr-card {
 
 #fale-conosco {
     background-color: #add8e65c;
-    margin-top: 10px;
 }
 
 #botao-envio:hover {
